[gd_scene load_steps=2 format=3 uid="uid://dteumnht66xm"]

[ext_resource type="Script" path="res://screens/end_screen.gd" id="1_6uh4g"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6uh4g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = 86.0
offset_right = 110.0
offset_bottom = 158.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "SCORE"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -163.0
offset_top = 139.0
offset_right = 164.0
offset_bottom = 211.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "TIME"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -91.0
offset_right = 123.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
